# cvae_kmc

./: .gitignore  LICENSE  README.md  pyproject.toml
cvae/data_handling/: data_loaders.py  data_transforms.py
cvae/model/: architecture.py
cvae/trained_models/isothermal_model/: config.json
cvae/trained_models/temperature_model/: config.json
cvae/training/: training.py
cvae/validation/: trajectory_validation.py
data/analysis/: max_difference_dataset.py
data/data_generation/: kmc_trajectories.py  ml_trajectories.py  training_data.py
examples/: generate_ml_data.py  generate_train_dataset.py  generate_validation_data.py  run_cvae_model.py  run_kmc_model.py  train_model.py
metrics/: roughness_1d.py
python_kmc/: dendrite_model.py
python_kmc/kmc_src/d1_1/: kmc_model_1d1.py  lattice_1d.py  plot_functions_1d.py  process_handler_1d.py  rate_calculator_1d.py
python_kmc/kmc_src/shared/: __init__.py  kmc_config.py  kmc_model_base.py  lattice_base.py  model_factory.py  neighbor_generation.py  process_handler_base.py  rate_calculator_base.py
