[project]
name = "cvae-kmc"
version = "0.1.0"
description = "Conditional Variational Autoencoder for Kinetic Monte Carlo Simulations"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.11.0",
    "matplotlib==3.10.9",
    "numba==0.65.1",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "torch==2.9.0",
    "tqdm==4.67.1",
]

[tool.setuptools]
packages = ["cvae", "metrics", "python_kmc", "data", "plotting"]
